--- a/appli.html
+++ b/appli.html
@@ -11,11 +11,11 @@
         <hr>
         <table width="100%">
             <tr style="text-align: center">
-                <td><a href="first.html">About us</a></td>
+                <td><a href="EXPT-2/first.html">About us</a></td>
                 <td>|</td>
-                <td><a href="appli.html">Career</a></td>
+                <td><a href="EXPT-2/appli.html">Career</a></td>
                 <td>|</td>
-                <td><a href="cal.html">Work Calender</a></td>
+                <td><a href="EXPT-2/cal.html">Work Calender</a></td>
                 <td>|</td>
                 <td> Search:<input type="search" placeholder="Search here"></td>
         </table>
