--- a/first.html
+++ b/first.html
@@ -13,7 +13,7 @@
         <tr style="text-align: center">
         <td><a href="EXPT-2/first.html">About us</a></td>
         <td>|</td>
-        <td><a href="EXPT-2/appli.html">Career</a></td>
+        <td><a href="appli.html">Career</a></td>
         <td>|</td>
         <td><a href="EXPT-2/cal.html">Work Calender</a></td>
         <td>|</td>
