--- a/cal.html
+++ b/cal.html
@@ -11,11 +11,11 @@
         <hr>
         <table width="100%">
             <tr style="text-align: center">
-                <td><a href="EXPT-2/first.html">About us</a></td>
+                <td><a href="https://sophassamuel.github.io/EXPT-2/first.html">About us</a></td>
                 <td>|</td>
-                <td><a href="EXPT-2/appli.html">Admission</a></td>
+                <td><a href="https://sophassamuel.github.io/EXPT-2/appli.html">Admission</a></td>
                 <td>|</td>
-                <td><a href="EXPT-2/cal.html">Academic Calender</a></td>
+                <td><a href="https://sophassamuel.github.io/EXPT-2/cal.html">Academic Calender</a></td>
                 <td>|</td>
                 <td> Search:<input type="search" placeholder="Search here"></td>
         </table>
