--- a/first.html
+++ b/first.html
@@ -23,7 +23,7 @@
          <tr>
         <td width="10%">
         <h1 style="text-align:center">About us</h1>
-    <p>Our Company is working towards innovation and perfection in computer science field to bring out various ideas from the students</p>
+    <div style="text-align: center;"><p>Our Company is working towards innovation and perfection in computer science field to bring out various ideas from the students</p></div>
              <hr>
              <audio controls>
                   <source src="song.mp3" type="audio/mpeg">
