--- a/Exp_2/index.html
+++ b/Exp_2/index.html
@@ -8,7 +8,7 @@
 
   <title>Exp-2 | URK20CS1153</title>
 
-  <link rel="icon" type="https://drive.google.com/file/d/1YykGJ5r5u39SfbBGwuJvXA26HUmXsutj/view?usp=sharing" href = "https://drive.google.com/file/d/1YykGJ5r5u39SfbBGwuJvXA26HUmXsutj/view?usp=sharing">
+    <link rel="icon" type="image/png" href="Assets/images/logo.png">
   
   <style>
     * {
