--- a/Exp_2/index.html
+++ b/Exp_2/index.html
@@ -8,7 +8,7 @@
 
   <title>Exp-2 | URK20CS1153</title>
 
-    <link rel="icon" type="image/png" href="Assets/images/logo.png">
+    <link rel="icon" type="image/png" href="Assets/logo.png">
   
   <style>
     * {
@@ -97,7 +97,7 @@
   <!-- Header Section -->
   <header class="header-section">
     <div class="profile-img-container">
-      <img src="Assets/images/1.png" alt="Load err" />
+      <img src="Assets/logo.png" alt="Load err" />
     </div>
     <div class="head-text">
       <h1 class="title">Sam's World</h1>
@@ -107,11 +107,10 @@
   <!-- Link Section -->
   <section class="link-container">
     <div class="links">
-      <a href="#">Link 1</a>
+      <a href="index">About us</a>
       <span>|</span>
-      <a href="#">Link 2</a>
+      <a href="submit.html">Form</a>
       <span>|</span>
-      <a href="#">Link 3</a>
     </div>
     <div class="search">
       <input type="text" placeholder="Search" />
