--- a/Exp_2/submit.html
+++ b/Exp_2/submit.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submit|Exp-2</title>
 
-    <link rel="icon" type="image/png" href="Assets/images/logo.png">
+    <link rel="icon" type="image/png" href="Assets/logo.png">
 
     <style>
         * {
