--- a/Exp_2/index.html
+++ b/Exp_2/index.html
@@ -11,6 +11,9 @@
     <link rel="icon" type="image/png" href="Assets/logo.png">
   
   <style>
+     body {
+            background-image: url("https://images.pexels.com/photos/696644/pexels-photo-696644.jpeg?auto=compress&cs=tinysrgb&w=1600");
+         }
     * {
       margin: 0;
       padding: 0;
