--- a/Exp_2/submit.html
+++ b/Exp_2/submit.html
@@ -10,6 +10,9 @@
     <link rel="icon" type="image/png" href="Assets/logo.png">
 
     <style>
+        body{
+            background-image: url("https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&cs=tinysrgb&w=1600")
+        }
         * {
             margin: 0;
             padding: 0;
